--- a/TMS_Api/TMS_Api.csproj
+++ b/TMS_Api/TMS_Api.csproj
@@ -8,5 +8,9 @@
     <ProjectReference Include="..\TMS\TMS.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 
 </Project>
